examples/test/testpolicy19888.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19888
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key14: value24
      key1: value25
      key20: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value20
          key44: value28
      podSelector:
        matchLabels:
          key5: value31
          key8: value3
